<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.event.create.CreateEventFragment">

    <TextView
        android:id="@+id/text_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:textColor="@color/orange_500"
        android:fontFamily="@font/konnect"
        android:textSize="30sp"
        android:text="@string/create_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_create_event"
        app:layout_constraintTop_toBottomOf="@id/text_event"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/konnect"
            android:text="@string/event_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/edit_event_title"
            android:fontFamily="@font/konnect"
            app:layout_constraintTop_toBottomOf="@id/text_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/konnect"
            android:text="@string/event_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_event_title" />
        <EditText
            android:id="@+id/edit_event_description"
            android:fontFamily="@font/konnect"
            app:layout_constraintTop_toBottomOf="@id/text_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_event_ticket_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/konnect"
            android:text="@string/event_ticket_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_event_description" />
        <EditText
            android:id="@+id/edit_event_ticket_no"
            android:fontFamily="@font/konnect"
            app:layout_constraintTop_toBottomOf="@id/text_event_ticket_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_create_event"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/konnect"
            android:text="@string/create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_event_ticket_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>